test/valid/AbstractMethod/AbstractMethod.plume
/**
 * @author Vasco T. Vasconcelos
 * @version $Id: AbstractMethod.plume 482 2012-06-04 19:07:29Z tcomp000 $
 */
abstract class AbstractMethod extends Object is

	abstract method foo : () -> String